--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "Just for fun",
   "main": "index.js",
   "scripts": {
-    "storybook": "start-storybook -p 3000 -c .storybook"
+    "start": "start-storybook -p 3000 -c .storybook",
+    "build": "build-storybook -c .storybook -o dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "babel-loader": "^8.0.0-beta.6",
-    "@storybook/react": "^5.0.6"
+    "@babel/core": "7.4.3",
+    "babel-loader": "8.0.0-beta.6",
+    "@storybook/react": "5.0.6"
   },
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   }
 }
