deploy as statics

--- a/now.json
+++ b/now.json
@@ -1,12 +1,8 @@
 {
   "builds": [
     {
-      "src": "*.html",
+      "src": "dist/*.html",
       "use": "@now/static"
-    },
-    {
-      "src": "./dist/index.html",
-      "use": "@now/node"
     }
   ]
 }
