--- a/now.json
+++ b/now.json
@@ -1,8 +1,6 @@
 {
   "builds": [
-    {
-      "src": "dist/index.html",
-      "use": "@now/static"
-    }
+    { "src": "dist/*.html", "use": "@now/static" },
+    { "src": "dist/*.js", "use": "@now/node" }
   ]
 }
