--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript-storybook",
   "version": "1.0.0",
   "description": "Just for fun",
-  "main": "dist/index.html",
+  "main": "index.js",
   "scripts": {
     "start": "start-storybook -p 3000 -c .storybook",
     "build": "build-storybook -c .storybook -o dist"
