--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "start-storybook -p 3000 -c .storybook",
-    "build": "build-storybook -c .storybook -o dist"
+    "build": "build-storybook -c .storybook -o dist",
+    "now-build": "npm run build"
   },
   "keywords": [],
   "author": "",
